src/test/data/highlighting/noarg_instructions.tz
parameter string;
return string;
storage string;
code {
    # all invalid in this block
    <error descr="DROP supports no arguments">DROP</error> "invalid arg";
    <error descr="ABS supports no arguments">ABS</error> "invalid arg" 123;
    <error descr="ADD supports no arguments">ADD</error> "invalid arg" 123;
    <error descr="AMOUNT supports no arguments">AMOUNT</error> "invalid arg" 123;
    <error descr="AND supports no arguments">AND</error> "invalid arg" 123;
    <error descr="BALANCE supports no arguments">BALANCE</error> "invalid arg" 123;
    <error descr="BLAKE2B supports no arguments">BLAKE2B</error> "invalid arg" 123;
    <error descr="CAST supports no arguments">CAST</error> "invalid arg" 123 ;
    <error descr="CHECK_SIGNATURE supports no arguments">CHECK_SIGNATURE</error> "invalid arg" 123;
    <error descr="COMPARE supports no arguments">COMPARE</error> "invalid arg" 123;
    <error descr="CONCAT supports no arguments">CONCAT</error> "invalid arg" 123;
    <error descr="CONS supports no arguments">CONS</error> "invalid arg" 123 ;
    <error descr="CREATE_ACCOUNT supports no arguments">CREATE_ACCOUNT</error> "invalid arg" 123;
    <error descr="CREATE_CONTRACT supports no arguments">CREATE_CONTRACT</error> "invalid arg" 123;
    <error descr="DIV supports no arguments">DIV</error> "invalid arg" 123;
    <error descr="DROP supports no arguments">DROP</error> "invalid arg" 123 ;
    <error descr="DUP supports no arguments">DUP</error> "invalid arg" 123;
    <error descr="EQ supports no arguments">EQ</error> "invalid arg" 123;
    <error descr="EXEC supports no arguments">EXEC</error> "invalid arg" 123 ;
    <error descr="FAILWITH supports no arguments">FAILWITH</error> "invalid arg" 123;
    <error descr="GE supports no arguments">GE</error> "invalid arg" 123;
    <error descr="GET supports no arguments">GET</error> "invalid arg" 123;
    <error descr="GT supports no arguments">GT</error> "invalid arg" 123;
    <error descr="HASH_KEY supports no arguments">HASH_KEY</error> "invalid arg" 123;
    <error descr="IMPLICIT_ACCOUNT supports no arguments">IMPLICIT_ACCOUNT</error> "invalid arg" 123;
    <error descr="INT supports no arguments">INT</error> "invalid arg" 123;
    <error descr="LE supports no arguments">LE</error> "invalid arg" 123;
    <error descr="LSL supports no arguments">LSL</error> "invalid arg" 123;
    <error descr="LSR supports no arguments">LSR</error> "invalid arg" 123;
    <error descr="LT supports no arguments">LT</error> "invalid arg" 123;
    <error descr="MEM supports no arguments">MEM</error> "invalid arg" 123;
    <error descr="MOD supports no arguments">MOD</error> "invalid arg" 123;
    <error descr="MUL supports no arguments">MUL</error> "invalid arg" 123;
    <error descr="NEG supports no arguments">NEG</error> "invalid arg" 123;
    <error descr="NEQ supports no arguments">NEQ</error> "invalid arg" 123;
    <error descr="NOT supports no arguments">NOT</error> "invalid arg" 123;
    <error descr="NOW supports no arguments">NOW</error> "invalid arg" 123;
    <error descr="OR supports no arguments">OR</error> "invalid arg" 123;
    <error descr="RENAME supports no arguments">RENAME</error> "invalid arg" 123;
    <error descr="SELF supports no arguments">SELF</error> "invalid arg" 123 ;
    <error descr="SENDER supports no arguments">SENDER</error> "invalid arg" 123;
    <error descr="SET_DELEGATE supports no arguments">SET_DELEGATE</error> "invalid arg" 123;
    <error descr="SOME supports no arguments">SOME</error> "invalid arg" 123 ;
    <error descr="SOURCE supports no arguments">SOURCE</error> "invalid arg" 123;
    <error descr="STEPS_TO_QUOTA supports no arguments">STEPS_TO_QUOTA</error> "invalid arg" 123;
    <error descr="SUB supports no arguments">SUB</error> "invalid arg" 123;
    <error descr="SWAP supports no arguments">SWAP</error> "invalid arg" 123 ;
    <error descr="TRANSFER_TOKENS supports no arguments">TRANSFER_TOKENS</error> "invalid arg" 123;
    <error descr="UNIT supports no arguments">UNIT</error> "invalid arg" 123 ;
    <error descr="UPDATE supports no arguments">UPDATE</error> "invalid arg" 123;
    <error descr="XOR supports no arguments">XOR</error> "invalid arg" 123;

    # all valid after this point
    ABS;
    ADD;
    AMOUNT;
    AND;
    BALANCE;
    BLAKE2B;
    CAR;
    CAST ;
    CDR;
    CHECK_SIGNATURE;
    COMPARE;
    CONCAT;
    CONS ;
    CREATE_ACCOUNT;
    CREATE_CONTRACT;
    DIV;
    DROP ;
    DUP;
    EQ;
    EXEC ;
    FAILWITH;
    GE;
    GET;
    GT;
    HASH_KEY;
    IMPLICIT_ACCOUNT;
    INT;
    LE;
    LSL;
    LSR;
    LT;
    MEM;
    MOD;
    MUL;
    NEG;
    NEQ;
    NOT;
    NOW;
    OR;
    PAIR ;
    RENAME;
    SELF ;
    SENDER;
    SET_DELEGATE;
    SOME ;
    SOURCE;
    STEPS_TO_QUOTA;
    SUB;
    SWAP ;
    TRANSFER_TOKENS;
    UNIT ;
    UPDATE;
    XOR;
};
